<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>padel-tournament-manager</artifactId>
  <build>
    <plugins>
      <!-- Maven Compiler Plugin -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <artifactId>mapstruct-processor</artifactId>
              <groupId>org.mapstruct</groupId>
              <version>${mapstruct.version}</version>
            </path>
            <path>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <artifactId>lombok-mapstruct-binding</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>0.2.0</version>
            </path>
          </annotationProcessorPaths>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
          <release>21</release>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.11.0</version>
      </plugin>
      <!-- JaCoCo Plugin -->
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>report</id>
            <phase>test</phase>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>0.8.12</version>
      </plugin>
    </plugins>
  </build>
  <groupId>io.github.redouanebali</groupId>
  <modelVersion>4.0.0</modelVersion>
  <modules>
    <module>app</module>
    <module>core</module>
  </modules>
  <packaging>pom</packaging>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.5.4</version>
  </parent>
  <properties>
    <lombok.version>1.18.38</lombok.version>
    <mapstruct.version>1.6.2</mapstruct.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.organization>redouanebali</sonar.organization>
  </properties>
  <version>1.0-SNAPSHOT</version>
</project>
